[project]
name = "finance-account"
version = "0.1.0"
description = "Ведение журнала доходов и расходов"
authors = [
    {name = "JorikSt",email = "rabota.georgie@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "bcrypt (==4.3.0)",
    "click (==8.2.1)",
    "colorama (==0.4.6)",
    "fastapi (==0.116.0)",
    "h11 (==0.16.0)",
    "idna (==3.10)",
    "pydantic (==2.11.7)",
    "pydantic-core (==2.33.2)",
    "pyjwt (==2.10.1)",
    "python-multipart (==0.0.20)",
    "sniffio (==1.3.1)",
    "starlette (==0.46.2)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.1)",
    "uvicorn (==0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
